--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
   branch = "release-v0"
   path = "lib/prb-test"
   url = "https://github.com/PaulRBerg/prb-test"
+[submodule "lib/seaport-core"]
+  branch = "main"
+  path = "lib/seaport-core"
+  url = "https://github.com/ProjectOpenSea/seaport-core"
