--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,6 @@
   branch = "release-v0"
   path = "lib/prb-test"
   url = "https://github.com/PaulRBerg/prb-test"
-[submodule "seaportcore"]
-  branch = "main"
-  path = "lib/seaport-core"
-  url = "https://github.com/ProjectOpenSea/seaport-core"
+[submodule "lib/seaportcore"]
+	path = lib/seaportcore
+	url = https://github.com/ProjectOpenSea/seaport-core.git
