--- a/.gitmodules
+++ b/.gitmodules
@@ -4,8 +4,8 @@
 	url = https://github.com/lib/forge-std
 [submodule "lib/prb-test"]
   branch = "release-v0"
-  path = "lib/prb-test"
-  url = "https://github.com/PaulRBerg/prb-test"
+	path = lib/prb-test
+	url = https://github.com/lib/prb-test
 [submodule "lib/seaportcore"]
 	path = lib/seaportcore
 	url = https://github.com/lib/seaportcore
