--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,11 @@
 [submodule "lib/forge-std"]
   branch = "v1"
-	path = lib/forge-std
-	url = https://github.com/lib/forge-std
+  path = "lib/forge-std"
+  url = "https://github.com/foundry-rs/forge-std"
 [submodule "lib/prb-test"]
   branch = "release-v0"
   path = "lib/prb-test"
   url = "https://github.com/PaulRBerg/prb-test"
-[submodule "lib/seaport-core"]
-	path = lib/seaport-core
-	url = https://github.com/lib/seaportcore
+[submodule "lib/seaportcore"]
+	path = "lib/seaportcore"
+	url = "https://github.com/ProjectOpenSea/seaport-core.git"
