--- a/.gitmodules
+++ b/.gitmodules
@@ -11,4 +11,4 @@
 	url = https://github.com/lib/seaport-core
 [submodule "lib/seaport-types"]
 	path = lib/seaport-types
-	url = https://github.com/ProjectOpenSea/seaport-types.git
+	url = https://github.com/lib/seaport-types
