--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "prettier:check": "prettier --check **/*.{json,md,yml} --ignore-path=.prettierignore",
     "prettier:write": "prettier --write **/*.{json,md,yml} --ignore-path=.prettierignore",
     "fork": "anvil -f https://eth-mainnet.g.alchemy.com/v2/$API_KEY_ALCHEMY --fork-block-number 17949204",
-    "buy": "forge script script/BuyOne.s.sol --broadcast --fork-url http://localhost:8545"
+    "buy": "forge script -vvvv script/BuyOne.s.sol --broadcast --fork-url http://localhost:8545"
   }
 }
